Updated description day 14, minor refactoring